# Toybox-depricated

./: .gitignore  Cargo.toml  README.md
breakout/src/: font.rs
core/src/: graphics.rs
ctoybox/: Cargo.toml  README.txt
ctoybox/src/: lib.rs
ctoybox/toybox/: CHANGES.txt  README.md  setup.py
ctoybox/toybox/toybox/: __init__.py  clib.py  toybox.py
toybox/: Cargo.toml
toybox/src/: lib.rs
wasm/: .gitignore  Cargo.toml  deps.sh  web.sh
wasm/src/: lib.rs
