[package]
name = "toybox-wasm"
version = "0.1.0"
authors = ["Emma 'Frank' Tosch <etosch@cs.umass.edu>"]

[lib]
name = "toybox_wasm"
crate-type = ["cdylib"]

[dependencies]
failure = "0.1"
libc = "0.2"
wasm-bindgen = "0.2"
breakout = {path = "../breakout", version="*"}
toybox = {path = "../toybox", version="*"}

[dependencies.toybox-core]
version = "*"
path = "../core"

